@@ -1,6 +1,7 @@
 Changes for templates:
 
 	* Added a debugging log for ss_get_mysql_stats.php (issue 54).
+	* Removed the use of GET_LOCK() and changed to flock() instead (issue 78).
 	* The template and script version is now recorded in a GPRINT (issue 79).
 	* Restored unflushed_log, which was accidentally deleted in 1.1.3.
 	* Added the InnoDB Active/Locked Transactions graph.
